--- a/k8s-service-template.yml
+++ b/k8s-service-template.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: service-template
+  name: notification-service
   namespace: cesieats-services
 spec:
   replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: service-template
+      app: notification-service
   template:
     metadata:
       labels:
-        app: service-template
+        app: notification-service
     spec:
       containers:
-        - name: service-template
-          image: kilme/service-template:$IMAGE_VERSION
+        - name: notification-service
+          image: kilme/notification-service:$IMAGE_VERSION
           resources:
             limits:
               memory: "512Mi"
@@ -27,11 +27,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: template-service
+  name: service-notification
   namespace: cesieats-services
 spec:
   selector:
-    app: service-template
+    app: notification-service
   ports:
     - name: http
       protocol: TCP
